fix overflow

--- a/frontend/src/components/wrappers/eventWrapperComponent/event-wrapper.scss
+++ b/frontend/src/components/wrappers/eventWrapperComponent/event-wrapper.scss
@@ -88,6 +88,8 @@
 
 @media screen and (min-width: 375px) and (max-width: 743px){
   .event-wrapper-component {
+    height: 100vh;
+
     .event-wrapper-head-1280 {
       display: none;
     }
