--- a/frontend/src/components/wrappers/profileWrapperComponent/profile-wrapper.scss
+++ b/frontend/src/components/wrappers/profileWrapperComponent/profile-wrapper.scss
@@ -117,6 +117,7 @@
     justify-content: stretch;
     overflow: auto;
     margin-bottom: 66px;
+    height: 100vh;
 
     &.safari-margin {
       margin-bottom: 136px;
